Fix dark mode for "Toy Battle", "Piratas", "Mia" and "Sneferu"

--- a/src/css/dark_theme/game.css
+++ b/src/css/dark_theme/game.css
@@ -14,12 +14,16 @@ input[type=range]::-webkit-slider-runnable-track,
 input[type=range]::-moz-range-track,
 input[type=range]::-ms-track {
   background-color: var(--dark-40) !important;
+  height: 16px;
+  border-radius: 8px;
+  border: none;
 }
 
 input[type=range]::-webkit-slider-thumb,
 input[type=range]::-moz-range-thumb,
 input[type=range]::-ms-thumb {
   background-color: var(--blue-70) !important;
+  border: none;
 }
 
 input[type=range]:focus::-webkit-slider-thumb,
